# operatorRL

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AWESOME-LIST-PRS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  M246-M265-full.patch  M266-M285.patch  QUICKSTART.md  README.md  RELEASE_NOTES.md  agent.py  agent_brokerage.py  agentrl-m01-m110.patch  agentrl-m01-m70.patch  agentrl-m111-m200.patch  agentrl-m201-m216-bench-integration.patch  apply.sh  behavior_model.json  circuit_breaker.py  constraint_engine.py  demo_audit.py  example_agent_brokerage.py  example_constraint_engineering.py  example_ghost_mode.py  example_omnichannel_integration.py  example_orchestration.py  example_prioritization.py  example_universal_signal_bus.py  example_upgrade_purge.py  ghost_mode.py  glama.json  intent_detection.py  m120_m200_benchmark.patch  m201_m220_logic.patch  m226-m245.patch  m286_m305.patch  (+22 more)
extensions/fiddler-bridge/: README.md  pyproject.toml
extensions/fiddler-bridge/config/: fiddler_mcp.yaml
extensions/fiddler-bridge/src/: fiddler_anomaly_detector.py  fiddler_cli_integration.py  fiddler_dashboard_data.py  fiddler_evolution_adapter.py  fiddler_packet_parser.py  fiddler_replay_engine.py  fiddler_rule_engine.py  fiddler_session_manager.py  fiddler_snapshot_exporter.py  fiddler_traffic_filter.py
extensions/fiddler-bridge/src/fiddler_bridge/: __init__.py  client.py  combat_calculator.py  fiddler_evolution_bridge.py  fiddler_mcp_connector.py  lol_protocol_decoder.py  minimap_signal_extractor.py  opponent_timing_tracker.py  proxifier_config.py  realtime_stream.py  reverse_proxy.py  sanitizer.py  session_30min_manager.py  session_capture.py  voice_advisor.py
extensions/protocol-decoder/: README.md  pyproject.toml
extensions/protocol-decoder/src/: lol_protocol_decoder.py  packet_correlation.py  packet_rate_limiter.py  protocol_health_monitor.py  protocol_registry.py  protocol_version_negotiator.py  unified_protocol_adapter.py
extensions/protocol-decoder/src/protocol_decoder/: __init__.py  codec.py  protobuf_dynamic.py  websocket.py
extensions/protocol-decoder/src/protocol_decoder/codecs/: __init__.py  dota2.py  riichi_city.py  tenhou.py
integrations/lol-fiddler-agent/: README.md  pyproject.toml
integrations/lol-fiddler-agent/config/: settings.yaml.template
integrations/lol-fiddler-agent/src/lol_fiddler_agent/: __init__.py  exceptions.py  orchestrator.py
integrations/lol-fiddler-agent/src/lol_fiddler_agent/agents/: strategy_agent.py
integrations/lol-fiddler-agent/src/lol_fiddler_agent/cli/: __init__.py  main.py
integrations/lol-fiddler-agent/src/lol_fiddler_agent/data/: __init__.py  event_processor.py  exporter.py  performance_report.py  pipeline.py
integrations/lol-fiddler-agent/src/lol_fiddler_agent/feedback/: __init__.py  aggregator.py  tracker.py
integrations/lol-fiddler-agent/src/lol_fiddler_agent/integrations/: __init__.py  agentos_bridge.py  agentos_bridge_v2.py  riot_api.py
integrations/lol-fiddler-agent/src/lol_fiddler_agent/ml/: __init__.py  feature_extractor.py  model_manager.py  model_registry.py  prediction.py  prediction_engine.py  training_bridge.py  training_data.py
integrations/lol-fiddler-agent/src/lol_fiddler_agent/models/: __init__.py  champion_db.py  game_snapshot.py  item_db.py  rune_analyzer.py
integrations/lol-fiddler-agent/src/lol_fiddler_agent/network/: __init__.py  connection_pool.py  fiddler_client.py  fiddler_client_v2.py  live_client_data.py  live_client_data_v2.py  packet_analyzer.py  packet_analyzer_v2.py  session_manager.py  traffic_classifier.py  websocket_bridge.py  websocket_bridge_v2.py
integrations/lol-fiddler-agent/src/lol_fiddler_agent/replay/: __init__.py  buffer.py  (+1 more)
integrations/lol-fiddler-agent/tests/: test_agentos_bridge_v2.py  test_feature_extractor_v2.py  test_fiddler_client.py  test_fiddler_client_v2.py  test_live_client_data.py  test_live_client_data_v2.py  test_m266_m285.py  test_model_manager.py  test_packet_analyzer_v2.py  test_prediction_v2.py  test_strategy_agent.py  test_strategy_agent_v2.py  test_training_bridge.py  test_websocket_bridge_v2.py
integrations/lol-history/: README.md  pyproject.toml
integrations/lol-history/src/lol_history/: __init__.py  ally_game_info_parser.py  champion_meta.py  champion_pool_tracker.py  champion_tendency_analyzer.py  game_detail_parser.py  game_timeline_analyzer.py  historical_training_exporter.py  history_evolution_bridge.py  history_match_aggregator.py  lcu_async_client.py  lcu_session_parser.py  match_analyzer.py  match_detail_parser.py  match_history_fetcher.py  matchup_database.py  meta_shift_tracker.py  opgg_build_fetcher.py  opgg_tier_list_parser.py  opponent_profiler.py  opponent_weakness_detector.py  patch_timeline.py  player_profiler.py  pregame_scout.py  rank_tier_resolver.py  ranked_tracker.py  seraphine_bridge.py  sgp_match_fetcher.py  summoner_order_resolver.py  team_synergy_scorer.py  teammate_analyzer.py  winrate_tracker.py
integrations/lol-history/tests/: __init__.py  test_champion_meta.py  test_game_history_abc.py  test_history.py  test_lcu_async_client.py  test_pregame_scout.py  test_ranked_tracker.py
integrations/mahjong/: README.md  pyproject.toml
integrations/mahjong/config/: majsoul.yaml  tenhou.yaml
integrations/mahjong/src/mahjong_agent/: __init__.py  agent.py  agentos_integration.py  akagi_mitm_adapter.py  autoplay.py  discard_advisor.py  evolution_loop.py  mahjong_evolution_loop.py  mahjong_hand_visualizer.py  mahjong_history_aggregator.py  mahjong_meta_tracker.py  mahjong_opponent_model_v2.py  mahjong_real_time_assistant.py  mahjong_strategy_advisor.py  mortal_bridge.py  opponent_model.py  replay_converter.py  reward.py  score_calculator.py  shanten_calculator.py  tile_encoder.py  training_collector.py
integrations/mahjong/tests/: __init__.py  test_agent.py  test_agentos_integration.py  test_autoplay.py  test_bridge.py  test_evolution_loop.py  test_m326_m335.py  test_models.py  test_mortal_adapter.py  test_overfit_verification.py  test_riichi_city_bridge.py  test_tenhou_bridge.py  test_training.py
(+564 files in other folders)
