[project]
name = "carbon-auditor-swarm"
version = "0.1.0"
description = "Autonomous auditing system for the Voluntary Carbon Market (VCM)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-control-plane>=0.2.0",
    "amb-core>=0.1.0",
    "cmvk>=0.1.0",
    "agent-tool-registry>=0.1.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]