[project]
name = "protocol-decoder"
version = "0.1.0"
description = "Game protocol codec registry for operatorRL — Majsoul/LoL/Dota2 parsers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "protobuf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
protocol_decoder = ["codecs/*.json", "codecs/*.proto"]
