[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-fiddler-agent"
version = "0.1.0"
description = "League of Legends AI Strategy System with Fiddler MCP Network Capture + AgentOS Integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "dylanyunlong", email = "dylanyunlong@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["lol", "league-of-legends", "ai", "fiddler", "mcp", "agentic-rl", "agent-os"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
ml = [
    "autogluon>=0.8.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
]

[project.scripts]
lol-agent = "lol_fiddler_agent.cli:main"

[project.urls]
Homepage = "https://github.com/dylanyunlon/lol-fiddler-agent"
Repository = "https://github.com/dylanyunlon/lol-fiddler-agent.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true
