[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lol-history"
version = "0.1.0"
description = "LoL historical battle data retrieval for pre-game intelligence — Seraphine-inspired"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lol_history"]
