[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mahjong-agent"
version = "0.1.0"
description = "Mahjong AI Agent integration for operatorRL — bridges Akagi MITM with self-evolving loop"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mahjong_agent"]
